# mthydra

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
doc/: build-plan.md  design.md  quickstart-mvp.md  runbook.md
doc/plans/: 2026-05-18-A-controller-state-and-backup-plan.md  2026-05-19-B-signed-endpoint-descriptor-plan.md  2026-05-19-C-cover-domain-pool-manager-plan.md  2026-05-20-F-eu-node-setup-plan.md  2026-05-21-D-ru-image-build-pipeline-plan.md  2026-05-21-G-ru-provisioning-artifact-generator-plan.md  2026-05-23-E-ru-eu-data-plane-plan.md  2026-05-24-H-shard-manager-plan.md  2026-05-25-D2-image-canary-validation-plan.md  2026-05-25-I-probe-vantage-harness-plan.md  2026-05-25-J-observability-service-plan.md  2026-05-25-K-user-distribution-channel-plan.md  2026-05-26-I2-probe-credentials-plan.md  2026-05-26-J2-obs-alert-ack-plan.md  2026-05-26-M-log-compaction-plan.md  2026-05-28-N-eu-host-installer-plan.md  2026-05-28-O-ru-bringup-and-image-cycle-plan.md  2026-05-30-P-eu-side-ru-automation-plan.md
doc/security/: 2026-05-27-audit-remediation.md  2026-05-30-audit-remediation.md
doc/specs/: 2026-05-18-A-controller-state-and-backup.md  2026-05-19-B-signed-endpoint-descriptor.md  2026-05-19-C-cover-domain-pool-manager.md  2026-05-20-F-eu-node-setup.md  2026-05-21-D-ru-image-build-pipeline.md  2026-05-21-G-ru-provisioning-artifact-generator.md  2026-05-23-E-ru-eu-data-plane.md  2026-05-24-H-shard-manager.md  2026-05-25-D2-image-canary-validation.md  2026-05-25-I-probe-vantage-harness.md  2026-05-25-J-observability-service.md  2026-05-25-K-user-distribution-channel.md  2026-05-26-I2-probe-credentials.md  2026-05-26-J2-obs-alert-ack.md  2026-05-26-M-log-compaction.md  2026-05-28-N-eu-host-installer.md  2026-05-28-O-ru-bringup-and-image-cycle.md  2026-05-30-P-eu-side-ru-automation.md
mthydra-backup-monitor/: pyproject.toml
mthydra-backup-monitor/src/mthydra_backup_monitor/: __main__.py  cli.py  emailer.py  poller.py
mthydra-backup-monitor/tests/unit/: test_emailer.py  test_poller.py
packaging/etc/mthydra/: backup-monitor.env.example  controller.env.example  controller.toml.example  install-standby.ini.example  install.ini.example
packaging/systemd/: mthydra-backup-monitor.service  mthydra-controller.service
packaging/tmpfiles.d/: mthydra.conf
scripts/: install.sh
src/mthydra/controller/: __main__.py  bootstrap.py  cli.py  config.py  promote.py  startup.py
src/mthydra/controller/backup/: age_crypt.py  pipeline.py  reconcile.py  s3_dest.py  triggers.py
src/mthydra/controller/data_exit/: __init__.py  config_writer.py  exit_set.py  signals.py  (+2 more)
src/mthydra/descriptor/: authority.py  keys.py  payload.py  scheduler.py  sign.py  verify.py
src/mthydra/ops/: agent_ops.py  hetzner.py  image_ops.py  install.py  main.py  ru_bringup.py
src/mthydra/ru_agent/: __init__.py  __main__.py  binary.py  config_gen.py  descriptor_refresh.py  hardening.py  iptables.py  seed.py  shutdown.py  supervisor.py
tests/: conftest.py
tests/integration/: test_cover_pool_lifecycle.py  test_data_exit_lifecycle.py  test_descriptor_roundtrip.py  test_distribution_lifecycle.py  test_end_to_end_backup.py  test_end_to_end_restore.py  test_gap_monitor.py  test_image_canary_lifecycle.py  test_image_lifecycle.py  test_install_sh.py  test_observability_lifecycle.py  test_probe_harness_lifecycle.py  test_promotion_lifecycle.py  test_provisioning_lifecycle.py  test_ru_agent_offline.py  test_shard_lifecycle.py
tests/property/: test_burned_set_monotonic.py  test_cover_pool_invariants.py  test_descriptor_chain_integrity.py  test_probe_invariants.py  test_shard_invariants.py
tests/unit/controller/: test_bootstrap.py  test_cli.py  test_config.py  test_promote.py  test_startup.py
tests/unit/descriptor/: test_authority.py  test_keys.py  test_payload.py  test_scheduler.py  test_sign.py  test_verify.py  test_verify_import_isolation.py
tests/unit/ops/: test_agent_ops.py  test_hetzner.py  test_image_ops.py  test_install.py  test_main.py  test_ru_bringup.py
tests/unit/ru_agent/: test_ast_no_controller_imports.py  test_atomic_write.py  test_binary.py  test_config_gen.py  test_descriptor_refresh.py  test_hardening.py  test_iptables.py  test_seed.py  test_shutdown.py  test_supervisor.py
(+125 files in other folders)
