[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mthydra"
version = "0.0.1"
description = "Resilient Telegram access controller — EU side"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "moto[s3]>=5",
    "hypothesis>=6",
    "ruff>=0.5",
]

[project.scripts]
mthydra-controller = "mthydra.controller.__main__:main"
mthydra-backup-monitor = "mthydra.backup_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
