[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mthydra"
version = "0.0.1"
description = "Resilient Telegram access controller — EU side"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "APScheduler>=3.10",
    "cryptography>=41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "moto[s3]>=5",
    "hypothesis>=6",
    "ruff>=0.5",
]

[project.scripts]
# mthydra-backup-monitor ships in the separate mthydra-backup-monitor wheel (plan §16.1)
mthydra-controller = "mthydra.controller.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = [
    "mthydra.controller.backup",
    "mthydra.controller.state",
    "mthydra.controller.restore",
]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
