[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mthydra"
version = "0.0.1"
description = "Resilient Telegram access controller — EU side"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "APScheduler>=3.11",
    # >=44 clears the pre-42 PKCS12 NULL-deref (CVE-2024-26130) and
    # Bleichenbacher timing (CVE-2023-50782) lines; tested against 48.x.
    "cryptography>=44.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "moto[s3]>=5",
    "hypothesis>=6",
    "ruff>=0.5",
]

[project.scripts]
# mthydra-backup-monitor ships in the separate mthydra-backup-monitor wheel (plan §16.1)
mthydra-controller = "mthydra.controller.__main__:main"
mthydra-ops = "mthydra.ops.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = [
    "mthydra.controller.backup",
    "mthydra.controller.state",
    "mthydra.controller.restore",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/mthydra/ru_agent/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
