[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mthydra-backup-monitor"
version = "0.0.1"
description = "mthydra backup generation-gap monitor (separate wheel per plan §16.1)"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "moto[s3]>=5",
    "ruff>=0.5",
]

[project.scripts]
mthydra-backup-monitor = "mthydra_backup_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
